--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 3,
 	"name": "VR Bangers Download Restorer",
-	"version": "1.1",
+	"version": "1.2",
 	"description": "Restores downloads on vrbangers.com",
 	"icons": {
 		"48": "icons/48.png",
@@ -17,7 +17,8 @@
 	"content_scripts": [
 		{
 			"matches": ["https://vrbangers.com/*"],
-			"js": ["content.js"]
+			"js": ["content.js"],
+			"all_frames": true
 		}
 	],
 	"browser_specific_settings": {
