Add support for VR Conk

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 3,
 	"name": "VR Bangers Download Restorer",
-	"version": "1.2",
-	"description": "Restores downloads on vrbangers.com",
+	"version": "1.3",
+	"description": "Restores downloads on VR Bangers websites",
 	"icons": {
 		"48": "icons/48.png",
 		"192": "icons/192.png"
@@ -16,7 +16,10 @@
 	},
 	"content_scripts": [
 		{
-			"matches": ["https://vrbangers.com/*"],
+			"matches": [
+				"https://vrbangers.com/*",
+				"https://vrconk.com/*"
+			],
 			"js": ["content.js"],
 			"all_frames": true
 		}
