--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 3,
 	"name": "VR Bangers Download Restorer",
-	"version": "1.3",
+	"version": "1.4",
 	"description": "Restores downloads on VR Bangers websites",
 	"icons": {
 		"48": "icons/48.png",
@@ -16,19 +16,19 @@
 	},
 	"content_scripts": [
 		{
-			"matches": ["https://vrbangers.com/*"],
+			"matches": ["*://vrbangers.com/*", "*://vrbtrans.com/*"],
 			"js": ["content.js"],
 			"css": ["css/vrbangers.css"],
 			"all_frames": true
 		},
 		{
-			"matches": ["https://vrconk.com/*"],
+			"matches": ["*://vrconk.com/*"],
 			"js": ["content.js"],
 			"css": ["css/vrconk.css"],
 			"all_frames": true
 		},
 		{
-			"matches": ["https://blowvr.com/*"],
+			"matches": ["*://blowvr.com/*"],
 			"js": ["content.js"],
 			"css": ["css/blowvr.css"],
 			"all_frames": true
