--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 3,
 	"name": "VR Bangers Download Restorer",
-	"version": "2.1",
+	"version": "2.2",
 	"description": "Restores downloads on VR Bangers websites",
 	"icons": {
 		"48": "icons/48.png",
@@ -21,7 +21,8 @@
 				"*://vrbtrans.com/*",
 				"*://vrbgay.com/*",
 				"*://vrconk.com/*",
-				"*://blowvr.com/*"
+				"*://blowvr.com/*",
+				"*://arporn.com/*"
 			],
 			"js": ["content.js"],
 			"all_frames": true
